# rex

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  rex.cabal
ctx/: hitch.rex  hitch.sire
doc/: c-comparison.md  docstrings.md  examples.md  hoon-comparison.md  nix-comparison.md  paper-insights.md  parsing.md  printing.md  rex-syntax-guide.md  rex-syntax-informal.md  syntax.txt
ex/: debug.tests  demos.tests  exprs.tests  flow.tests  heirs.tests  multi.tests  quips.tests  regression-quips.tests
hs/lib/Rex/: CLI.hs  Error.hs  PrintRexTest.hs  Rex.hs  String.hs  Tree2.hs
hs/test/: PDocTestMain.hs
note/: README.md  backstep-understanding.md  flexible-page-strings.md  heir-alignment.md  poem-printing-notes.md  prefix-precedence-conclusions.md  prettiest-evaluation.md  prettiest.md  printer-edge-cases.md  printer-implementation.md  printing-blocks.md  quip-stripping.md  slug-in-heir-impl.md  span-strings.md  staircase-layout.md  trailing-rune-single-nest.md
src/c/: Makefile  rex.c
src/c/ex/: bloc.rex  bloc0.rex  bloc2.rex  expo.rex  hslex.rex  ifix.rex  ifix1.rex  mixed.rex  nest.rex  poison.rex  quip.rex  slug.rex  twrap.rex
src/c/gold/: bloc.rex  bloc1.rex  bloc2.rex  expo.rex  hslex.rex  ifix.rex  itrail.rex  nest.rex  node.rex  qfmt.rex  quip.rex  simple.rex  slug.rex  strip.rex  trad.rex  twrap.rex
src/c/hilite/: bloc.rex  bloc1.rex  bloc2.rex  expo.rex  hslex.rex  ifix.rex  itrail.rex  nest.rex  node.rex  qfmt.rex  quip.rex  simple.rex  slug.rex  strip.rex  trad.rex  twrap.rex
src/hs/: Main.hs  PrintRexTestMain.hs  PrintTreeTestMain.hs  RexTestMain.hs
src/hs/Rex/: Lex.hs  PDoc.hs  PDocTest.hs  Print.hs  PrintRex.hs  PrintRexTest.hs  PrintTree.hs  PrintTreeTest.hs  Rex.hs  Test.hs  Tree2.hs
src/hs/ex/print-rex/: blocks.tests  debug.tests  docstrings.tests  exprs.tests  flow.tests  heirs.tests  leaves.tests  nests.tests  (+3 more)
todo/: expr-clear-with-heir.md  fix-backstep-leakage.md  flexible-page-strings.md  inline-uglies.txt  line-massage.md  missing-test-cases.md  multiline-string-stripping.md  parser-s-block-error.md  pflow-layout.md  phrasic-grouping.md  ppara-sequence-plan.md  printer-multiline-strings.md  rchoice-design.md  rex-fuzzing-plan.md  rex-normalizer.md  rex-web-demo.md  slug-in-heir.md  string-module.md  test-driver-factoring.md  trailing-rune-dropped.md  ugly-record-formatting.md
(+6 files in other folders)
